--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME=AMPLAS
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:SsRICoB1v95AuyutGSj3Kxep/AB61PVsPynZesqL+WU=
+APP_KEY=base64:WhQDzMZLdjvu0ja8pU92jt4m5vHEfrCetDIqjxzzN10=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=22a922b799e89c
-MAIL_PASSWORD=fc68bafc4ce422
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="no-reply@ampas.com"
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
